--- a/styles.scss
+++ b/styles.scss
@@ -9,7 +9,7 @@ body, html {
 
 #title-bar {
     height: 30px;
-    background-color: #007acc;
+    background-color: rgb(18, 15, 26);
     color: white;
     display: flex;
     align-items: center;
